# Software-Engineering-SS2025

./: README.md  main.py  main_alt.py  my_classes.py  my_functions.py  pyproject.toml  simulate_data.py  test.py  test_alt.py
