[project]
name = "Software-Engineering-SS2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pm6953", email = "pm.schratt@mci4me.at"},
]
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
